--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
+/* .container {
+    background: linear-gradient(#577ce8, #6ea7f1);
+} */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+/*     padding: 20px; */
+  background-color: #B3B3B3;
+  font-family: 'Poppins', sans-serif;
+}
+
+.App {
+  display: flex;
+  width: 100%;
 }
