--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@
 body {
 /*     padding: 20px; */
   font-family: 'Poppins', sans-serif;
+  overflow-y: scroll;
+
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .App {
