--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
   font-family: 'Poppins', sans-serif;
   overflow-y: scroll;
   width: 100vw;
-
 }
 
 ::-webkit-scrollbar {
@@ -23,4 +22,12 @@ body {
 
 ul {
   list-style: none;
+}
+
+@media screen and (min-width: 767px) {
+  .App {
+    background: linear-gradient(#567AE8, #71AEF0);
+    
+  }
+  
 }
